<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp"
    android:orientation="vertical" >
    <Button
        android:id="@+id/tdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="84dp"
        android:text="@string/start"
        android:background="#FFFFFF"
        android:onClick="tdown" />

    <TextView
        android:id="@+id/tlabel1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:text="@string/txt1"
        android:textColor="#FFFFFF"
        android:textSize="30px" />

    <EditText
        android:id="@+id/tfile1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tlabel1"
        android:layout_alignBottom="@+id/tlabel1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tfile1" />

    <EditText
        android:id="@+id/tfile2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tfile1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tfile2" />

    <TextView
        android:id="@+id/tlabel2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tfile2"
        android:layout_alignBottom="@+id/tfile2"
        android:layout_alignParentLeft="true"
        android:text="@string/txt2"
        android:textColor="#FFFFFF"
        android:textSize="30px" />

    <EditText
        android:id="@+id/tfile3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tfile2"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tfile3" />

    <TextView
        android:id="@+id/tlabel3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tfile3"
        android:layout_alignBottom="@+id/tfile3"
        android:layout_alignParentLeft="true"
        android:text="@string/txt3"
        android:textColor="#FFFFFF"
        android:textSize="30px" />

    <TextView
        android:id="@+id/tlabel5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tfile5"
        android:layout_alignBottom="@+id/tfile5"
        android:layout_alignParentLeft="true"
        android:text="@string/txt5"
        android:textColor="#FFFFFF"
        android:textSize="30px" />

    <EditText
        android:id="@+id/tfile5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tdown"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="63dp"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tfile5" />

    <EditText
        android:id="@+id/tfile4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tfile3"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:singleLine="true"
        android:textColor="#FFFFFF"
        android:text="@string/tfile4" />

    <TextView
        android:id="@+id/tlabel4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tfile4"
        android:layout_alignBottom="@+id/tfile4"
        android:layout_alignParentLeft="true"
        android:textColor="#FFFFFF"
        android:text="@string/txt4"
        android:textSize="30px" />
    

</RelativeLayout>
